# simple_rag

./: .gitignore  README.md  README.txt  docker-compose.yml  project_structure  prometheus.yml  pyproject.toml  requirements.txt
rag_service/: .gitignore  db.sqlite3  manage.py
rag_service/chat/: metrics.py  middleware.py  urls.py  views.py
rag_service/chat/services/: base_service.py  document_processor.py  llm_service.py  mgpt_service.py  mistral_service.py  rugpt_service.py  saiga_service.py
rag_service/chat/templates/chat/: base.html  chat.html  doc_chat.html  document.html  index.html  monitoring.html
rag_service/rag_service/: asgi.py  settings.py  urls.py  wsgi.py
rag_service/static/css/: main.css
rag_service/static/js/: chat.js  document.js  simple_chat.js
