[tool.poetry]
name = "llm-rag-app"
version = "0.1.0"
description = "RAG приложение с использованием Vikhr-Llama"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.0"
transformers = "^4.36.0"
torch = {version = "^2.4.1+cu121", source = "pytorch-gpu"}
pypdf = "^3.17.0"
faiss-cpu = "^1.7.4"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
python-dotenv = "^1.0.0"
sentence-transformers = "^2.2.2"
accelerate = "^0.26.0"
safetensors = "^0.4.2"
peft = {version = "^0.7.1", extras = ["accelerate"]}
prometheus-client = "^0.19.0"
django-prometheus = "^2.3.1"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.1.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi-line-output = 3

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit" 